--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env
-DISCORD_TOKEN={OTE2MDA3NTU5ODc2NDY0Njkx.Yaj4hA.xgUTpSUU8OnjEhqhrAiDE-roZr4}
+DISCORD_TOKEN=OTE2MDA3NTU5ODc2NDY0Njkx.Yaj4hA._MzlRJzHLsqjQ0S3__VMmHL_UB0
